--- a/index.html
+++ b/index.html
@@ -58,6 +58,60 @@
       // 🧠 Implement a `getAllReversed` method which returns the ints in reverse order
       // ❗ WARNING: except for `getAllReversed`, methods must respect the order of the integers
       // ❗ WARNING: note that none of the methods actually mutate the `ints` property
+      class NumberArray {
+  constructor(...args) {
+    this.ints = args;
+  }
+
+  getAll() {
+    return this.ints.slice();
+  }
+
+  getEvens() {
+    return this.ints.filter(num => num % 2 === 0);
+  }
+
+  getNegatives() {
+    return this.ints.filter(num => num < 0);
+  }
+
+  getAllSquared() {
+    return this.ints.map(num => num ** 2);
+  }
+
+  pop() {
+    if (this.ints.length === 0) {
+      return undefined;
+    }
+    return this.ints.pop();
+  }
+
+  push(num) {
+    this.ints.push(num);
+    return this.getAll();
+  }
+
+  getEveryNth(n) {
+    return this.ints.filter((_, index) => index % n === 0);
+  }
+
+  getAllReversed() {
+    return this.ints.slice().reverse();
+  }
+}
+
+// Example Usage:
+const numArray = new NumberArray(1, 2, 3, 4, 5);
+
+console.log(numArray.getAll());           
+console.log(numArray.getEvens());         
+console.log(numArray.getNegatives());     
+console.log(numArray.getAllSquared());    
+console.log(numArray.pop());             
+console.log(numArray.push(6));            
+console.log(numArray.getEveryNth(2));     
+console.log(numArray.getAllReversed());   
+
 
     }
 
@@ -76,6 +130,29 @@
       //      * When engaging the safety, return "Safety enabled!"
       //      * When disengaging the safety, return "Safety disabled!"
       // 🌟 HINT: instances need to keep track of their maximum capacity as well as their current capacity
+      class ProjectileLauncher {
+  constructor(totalProjectiles) {
+    this.maxCapacity = totalProjectiles;
+    this.currentCapacity = totalProjectiles;
+    this.safetyOn = true;
+  }
+
+  shoot() {
+    if (this.currentCapacity > 0 && !this.safetyOn) {
+      this.currentCapacity -= 1;
+      return "Bang!";
+    } else {
+      return "Click!";
+    }
+  }
+
+  reload(amount) {
+    if (typeof amount === "number" && amount > 0) {
+      this.currentCapacity = Math.min(this.currentCapacity + amount, this.maxCapacity);
+      return `${this.currentCapacity} projectiles left!`;
+    } else {
+      return "Error relo
+
 
     }
 
@@ -95,6 +172,40 @@
       //    ebook.next() // returns null
       // 🌟 HINT: remember about the `slice` method which strings and arrays have
       // ❗ Feel free to implement `back`, although this is not required nor graded
+
+    class EBook {
+  constructor(bookText, charactersPerPage) {
+    this.bookText = bookText;
+    this.charactersPerPage = charactersPerPage;
+    this.currentPage = 0;
+  }
+
+  next() {
+    const start = this.currentPage * this.charactersPerPage;
+    const end = (this.currentPage + 1) * this.charactersPerPage;
+    const nextPage = this.bookText.slice(start, end);
+
+    if (nextPage.length > 0) {
+      this.currentPage++;
+      return nextPage;
+    } else {
+      return null;
+    }
+  }
+  back() {
+    if (this.currentPage > 0) {
+      this.currentPage--;
+      const start = this.currentPage * this.charactersPerPage;
+      const end = (this.currentPage + 1) * this.charactersPerPage;
+      return this.bookText.slice(start, end);
+    } else {
+      return null;
+    }
+  }
+}
+
+
+
 
     }
 
@@ -130,6 +241,26 @@
       //      console.log(list) // prints ["a"]
       // 👉 HINT: if you are not feeling confident with map and filter, solve the problem with for loops,
       //      and with the piece of mind of all tests passing, refactor to use map/filter
+      class AntFarm {
+  constructor(...antNames) {
+    this.ants = antNames.map(name => ({ name, health: 100 }));
+  }
+
+  work() {
+    if (this.ants.length === 0) {
+      return "No ants here. Did you work them to death?";
+    }
+
+    const startingHealth = 100;
+    const workCost = 20;
+
+    this.ants = this.ants.map(ant => {
+      ant.health = Math.max(ant.health - workCost, 0);
+      return ant;
+    });
+
+    return `${this.ants.length} ants starting work!`
+
 
     }
 
